--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,11 @@
-/* Reset de estilos */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 /* -- HEADER -- */
 header {
   width: 100%;
   height: 200px;
   background-image: url(../imgs/background.jpeg);
   background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
 }
 
